--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: cv_application
-description: 👤simple portfolio project with Flutter.
+description: simple portfolio project with Flutter.
 
 publish_to: 'none'
 
